2007-07-18  George Giolfan  <georgegiolfan@yahoo.com>

	* CollectionView.cs: More work.

2007-07-12  George Giolfan  <georgegiolfan@yahoo.com>

	* CollectionView.cs: More work.

2007-07-11  George Giolfan  <georgegiolfan@yahoo.com>

	* CollectionView.cs: More work.

2007-07-10  George Giolfan  <georgegiolfan@yahoo.com>

	* CollectionView.cs: More work.
	
2007-07-09  George Giolfan  <georgegiolfan@yahoo.com>

	* CollectionView.cs: More work.