@@ -1,3 +1,7 @@
+2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* CollectionViewTest.cs: Added a few tests.
+
 2007-06-18 George Giolfan  <georgegiolfan@yahoo.com>
 
 	* CollectionViewTest.cs: Added some tests.
