@@ -1,3 +1,7 @@
+2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* CollectionView.cs: A few improvements.
+
 2007-07-18  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* CollectionView.cs: More work.
